--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/mapbox-gl": "^2.7.11",
+    "@urbica/react-map-gl-draw": "^0.3.5",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "dotenv": "^16.3.1",
+    "mapbox-gl": "^2.15.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.1.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.63.6",
+    "turf": "^3.0.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
