--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "linebreak-style": 0,
-    "react/button-has-type": "off"
+    "react/button-has-type": "off",
+    "no-restricted-syntax": "off"
   }
 }
