--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/area": "^6.5.0",
     "@types/mapbox-gl": "^2.7.11",
     "@urbica/react-map-gl-draw": "^0.3.5",
     "bootstrap": "^5.3.0",
