--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.10.5",
     "dotenv": "^16.3.1",
     "mapbox-gl": "^2.15.0",
+    "mapbox-gl-geocoder": "^2.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
