--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-map-gl": "^7.1.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
