--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.63.6",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
