--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^4.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw-waypoint": "^1.0.3",
+    "papaparse": "^5.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
