--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/mapbox-gl": "^2.7.11",
     "@urbica/react-map-gl-draw": "^0.3.5",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^4.3.2",
     "cors": "^2.8.5",
@@ -25,6 +25,7 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
+    "react-google-charts": "^4.0.1",
     "react-icons": "^4.10.1",
     "react-map-gl": "^7.1.2",
     "react-router-dom": "^6.14.1",
