--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^4.3.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "mapbox-gl": "^2.15.0",
     "mapbox-gl-draw-waypoint": "^1.0.3",
