--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/mapbox-gl": "^2.7.11",
     "@urbica/react-map-gl-draw": "^0.3.5",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -20,6 +20,7 @@
     "mapbox-gl-draw-waypoint": "^1.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
